# budget-stats-gui

./: README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml
.run/: front-end build.run.xml  front-end dev.run.xml  tauri build.run.xml  tauri clean.run.xml  tauri dev.run.xml  test code-formatting.run.xml  write code-formatting.run.xml
src/: App.vue  component-libraries.txt  main.ts  shims-vue.d.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: export_numbers.scpt
src-tauri/src/: controlled_functions.rs  db_modules.rs  independent_functions.rs  lib.rs
src-tauri/src/controlled_functions/: get_runnable_scripts.rs  internal_scripts.rs  investia_tfsa_data_view_scripts.rs  run_script_call.rs  tangerine_chequing_data_view_scripts.rs  wealthsimple_data_view_scripts.rs
src-tauri/src/controlled_functions/internal_scripts/: gen_stats_investia_tfsa.rs  gen_stats_tangerine_chequing.rs  gen_stats_wealthsimple.rs
src-tauri/src/controlled_functions/wealthsimple_data_view_scripts/: averages.rs  gen_stats.rs
src-tauri/src/db_modules/: db_pool_opener.rs  delete_script_from_db.rs  import_script_to_db.rs
src-tauri/src/independent_functions/: carousel_alerts_data_landing_page.rs  csv_data_import_apple_script.rs
src/components/: circle-selector.vue  menuBar.vue  scriptAddBar.vue
src/controller/: view-data-landing-carousel.ts
src/router/: index.ts
src/views/: Data-View-Account-Selection.vue  Develop.vue  FileUpload.vue  Landing-Page.vue  Script-Upload.vue  Settings.vue  View-Data-Landing.vue
(+10 files in other folders)
