[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0.228", features = ["derive"] }
log = "0.4.29"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2.8.0"
tauri-plugin-dialog = "2.6.0"
sqlx = { version = "=0.8.6", features = ["sqlite", "runtime-tokio"] }
tokio = "1.50.0"
anyhow = "1.0.102"
chrono = "0.4"
uuid = { version = "1.22.0", features = ["v4"] }
